Adds update functionality to service accounts in the edit page

--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -108,7 +108,7 @@
             }
         </div>
         <div class="sidebar-bordergrid bottom">
-            @if (Model.ServiceAccounts.Count > 0)
+            @if (@Model.ServiceAccounts.Count > 0)
             {
                 <label>
                     Service Accounts
