--- a/Bonobo.Git.Server/Views/Repository/Detail.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Detail.cshtml
@@ -157,7 +157,8 @@
                 <details style="display: block; overflow: hidden; white-space: nowrap;">
                     <summary>
                         <div class="sidebar-text">
-                                <i class="fa fa-chevron-down"></i><input style="text-overflow: ellipsis; width: 80% " class="removeVisualInput" value="@dependency.KnownDependency.ComponentName (@dependency.VersionInUse)" readonly />
+                            <input style="text-overflow: ellipsis; width: 30% " class="removeVisualInput" value="@dependency.KnownDependency.ComponentName" readonly="">
+                            <input style="text-overflow: ellipsis; width: 40% " class="removeVisualInput" value="(@dependency.VersionInUse)" readonly="">
                         </div>
                     </summary>
                     <div class="pass-info">
