--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -95,11 +95,68 @@
         <i class="fa fa-info-circle" title="@Resources.Repository_TeamsHint"></i>
     </div>
 
+    <fieldset class="pure-control-group">
+        <legend>
+            @Resources.SA
+        </legend>
+        <template id="serviceAccountrow">
+            <div class="pure-control-group service-account-details">
+                <div class="pure-control-group" style="display:none;">
+                    <label> @Resources.SA_ID </label>
+                    <input id="ServiceAccounts[i].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
+                </div>
+                <div class="pure-control-group">
+                    <label> @Resources.SA_Name </label>
+                    <input id="ServiceAccounts[i].ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
+                    <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                </div>
+                <div class="pure-control-group">
+                    <label> @Resources.SA_InPassManager </label>
+                    <input type="checkbox" id="ServiceAccounts[i].InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                </div>
+                <div class="pure-control-group">
+                    <label> @Resources.SA_PassLastUpdated </label>
+                    <input type="datetime" id="ServiceAccounts[i].PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
+                </div>
+                <button type="button" class="pure-button pure-button-primary"><i style="color:red;" class="fa fa-minus-circle"></i> @Resources.Delete_Confirm</button>
+            </div>
+        </template>
 
+        @if (Model != null && Model.ServiceAccounts != null)
+        {
+            for (int i = 0; i < Model.ServiceAccounts.Count; i++)
+            {
+
+                <div class="pure-control-group">
+                    @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                    @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                    <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                </div>
+                <div class="pure-control-group">
+                    @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
+                    @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
+                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
+                </div>
+                <div class="pure-control-group">
+                    @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                    @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                </div>
+                <div class="pure-control-group" style="display:none;">
+                    @Html.LabelFor(m => m.ServiceAccounts[i].Id)
+                    @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
+                    @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
+                    @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
+                </div>
+            }
+        }
+    </fieldset>
 
     <div class="pure-controls">
         <a class="pure-button" href="@Url.Action("Index")"><i class="fa fa-long-arrow-left"></i> @Resources.Repository_Back</a>
         <button type="submit" class="pure-button pure-button-primary"><i class="fa fa-save"></i> @Resources.Repository_Create_Submit</button>
     </div>
 </fieldset>
+<script src="~/scripts/ServiceAccountsEdit.js" asp-append-version="true"></script>
 }
